community/kde-frameworks: upgrade to 5.67.0

--- a/community/knotifications/APKBUILD
+++ b/community/knotifications/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=knotifications
-pkgver=5.66.0
+pkgver=5.67.0
 pkgrel=0
 pkgdesc="Abstraction for system notifications"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
-depends_dev="qt5-qtbase-dev qt5-qtspeech-dev qt5-qtx11extras-dev kwindowsystem-dev kconfig-dev kcodecs-dev kcoreaddons-dev phonon-dev"
+depends_dev="qt5-qtbase-dev qt5-qtspeech-dev qt5-qtx11extras-dev kconfig-dev kcoreaddons-dev phonon-dev"
 makedepends="$depends_dev extra-cmake-modules qt5-qttools-dev doxygen"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/knotifications-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
@@ -38,4 +38,4 @@ package() {
 	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
-sha512sums="f5a2f809204e87714577e24dc6a9e5d8556bab4a19a491b6dd45ef62f379861e6a2bcba9e023ab60a004f574cf8ec41a3c4764e301cfd085d4eb90c1d7561ec1  knotifications-5.66.0.tar.xz"
+sha512sums="3ee74f84d8157142e943b348d12601ada8c5741026098abddd1433379753352b7f775d2382f02f7b1d8c8ef3387a3a23a3eecc80826718b5ff07946d5925e300  knotifications-5.67.0.tar.xz"
