--- a/community/ktextwidgets/APKBUILD
+++ b/community/ktextwidgets/APKBUILD
@@ -1,13 +1,13 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=ktextwidgets
-pkgver=5.66.0
+pkgver=5.67.0
 pkgrel=0
 pkgdesc="Advanced text editing widgets"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-or-later"
-depends_dev="qt5-qtspeech-dev kcompletion-dev kconfig-dev kconfigwidgets-dev ki18n-dev kiconthemes-dev kservice-dev kwidgetsaddons-dev kwindowsystem-dev sonnet-dev"
+depends_dev="qt5-qtspeech-dev kcompletion-dev kconfig-dev kconfigwidgets-dev ki18n-dev kiconthemes-dev kservice-dev kwidgetsaddons-dev sonnet-dev"
 makedepends="$depends_dev extra-cmake-modules doxygen qt5-qttools-dev"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/ktextwidgets-$pkgver.tar.xz"
@@ -38,4 +38,4 @@ package() {
 	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
-sha512sums="b3cf365c7b2faf15366041488348d96a2bb9a3c8df508a913fab43b81f84db9cddcf795dfda5e0018091bad96e10a2b0c4073dbb80d0eb528fe52867765e4fb8  ktextwidgets-5.66.0.tar.xz"
+sha512sums="9c36e81bc6f94c291fd036173a661454a60d47879607c1d0eaafaff177d6e99ea134a0117918e5e3b3f2951268f7151edeba649ace2272959404efb843e2884a  ktextwidgets-5.67.0.tar.xz"
