ci: silence fetching from upstream
To reduce noise in the job log, silence the output of `git fetch`.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ default:
     # Make sure master points to the correct upstream commit
     before_script:
       - >
-        git fetch $CI_MERGE_REQUEST_PROJECT_URL
+        git fetch -nq $CI_MERGE_REQUEST_PROJECT_URL
         +refs/heads/$CI_MERGE_REQUEST_TARGET_BRANCH_NAME:refs/heads/$CI_MERGE_REQUEST_TARGET_BRANCH_NAME
 
 lint:
