testing/badwolf: enable tests

--- a/testing/badwolf/APKBUILD
+++ b/testing/badwolf/APKBUILD
@@ -7,12 +7,16 @@ url="https://hacktivis.me/projects/badwolf"
 arch="all"
 license="BSD-3-Clause"
 makedepends="webkit2gtk-dev"
-subpackages="$pkgname-doc"
-options="!check" # unit tests coming in next release
+subpackages="$pkgname-doc $pkgname-dbg"
+options=""
 source="https://hacktivis.me/releases/badwolf-$pkgver.tar.gz"
 
 build() {
 	make PREFIX=/usr CFLAGS="$CFLAGS"
+}
+
+check() {
+	make test
 }
 
 package() {
