community/uacme: create acme-challenge dir
The provided challenge hook expects /var/www/.well-known/acme-challenge
to exist.

--- a/community/uacme/APKBUILD
+++ b/community/uacme/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Eivind Uggedal <eu@eju.no>
 pkgname=uacme
 pkgver=1.0.22
-pkgrel=0
+pkgrel=1
 pkgdesc="Lightweight client for the RFC8555 ACMEv2 protocol"
 url="https://github.com/ndilieto/uacme"
 arch="all"
@@ -27,6 +27,8 @@ build() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+
+	install -d "$pkgdir"/var/www/.well-known/acme-challenge
 }
 
 sha512sums="6aa1abb6f887e6c6686a7d3c00ac80ff8a34034ee8e818d338d4d2daa810fba3045d0b1f840004b24c3a214e6541018b6520a16d5ada655c9c867c23890336c4  uacme-1.0.22.tar.gz"
