Revert "main/raspberrypi: upgrade to snapshot of 2020-01-14"
This reverts commit b69d8fb1263fc1a7aa8f3454ee69f5808c988ef3.
This reverts commit b57933b0770c6238fa4e52e4557fb7c9f3443b97.

--- a/main/raspberrypi/APKBUILD
+++ b/main/raspberrypi/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=raspberrypi
-pkgver=0.20200114
-_commitid=06bc6daa02137ca72b7a2104afad81e82a44de17
-pkgrel=0
+pkgver=0.20190416
+_commitid=ff2bd4552145e8dc190276d8fbdbadc7e8e0da78
+pkgrel=1
 pkgdesc="Raspberry Pi support tools"
 url="https://github.com/raspberrypi/userland"
 arch="armhf armv7 aarch64"
@@ -44,6 +44,7 @@ package() {
 
 	# nuke the unwanted stuff
 	rm -rf "$pkgdir"/opt/vc/src
+	mv "$pkgdir"/opt/vc/etc "$pkgdir"
 }
 
 static() {
@@ -60,4 +61,4 @@ libs() {
 	mv "$pkgdir"/opt/vc/lib/* "$subpkgdir"/opt/vc/lib
 }
 
-sha512sums="8a476b7d749457718e02efd488b175a45c2522e2fc0c9198a3085670af0ad29dfc2e04562c9e6944085af5589ba1943bcefb2c023c465d895a30c9090b8f7bd7  raspberrypi-0.20200114.tar.gz"
+sha512sums="dad48bd88d11a3f6807250275950235122bf5f35c47c5891f4e2c40964adbf69de6dbc014cea561540e516bed369257fc134a0114b9bdfa6e6a689a48bfd9f40  raspberrypi-0.20190416.tar.gz"
