--- a/main/libgee/APKBUILD
+++ b/main/libgee/APKBUILD
@@ -1,19 +1,18 @@
-# Maintainer: Natanael Copa <ncopa@alpinelinux.org>
+# Contributor: Rasmus Thomsen <oss@cogitri.dev>
+# Contributor: Natanael Copa <ncopa@alpinelinux.org>
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=libgee
-pkgver=0.20.2
-_rest=${pkgver#*.*.}
-_xy=${pkgver%.$_rest}
+pkgver=0.20.3
 pkgrel=0
 pkgdesc="GObject collection library"
-url="http://live.gnome.org/Libgee"
+url="https://wiki.gnome.org/Projects/Libgee"
 arch="all"
 license="LGPL-2.1-or-later"
 makedepends="glib-dev gobject-introspection-dev"
 subpackages="$pkgname-dev"
-source="https://download.gnome.org/sources/libgee/${_xy}/libgee-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/libgee/${pkgver%.*}/libgee-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -23,13 +22,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4ea312f73046fee5d0ad1d5d1942c9f4aecbec22509ce7f00b51352039b9643d65d2f37d4c0de550f0165ff7f6058cf88ecb55d7c5963706a1b63d5ec14c7d7d  libgee-0.20.2.tar.xz"
+sha512sums="c7dd32bc02ea9f0f70e7593bc5625139802a52674e5aa07fe6fc815a78517f25590419b2da00e194bf7bf5f1505a138ba133d6dba67c44f9cdcb38389825adf7  libgee-0.20.3.tar.xz"
