--- a/main/man-pages/APKBUILD
+++ b/main/man-pages/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=man-pages
-pkgver=5.04
+pkgver=5.05
 _posixver=2013-a
 pkgrel=0
 pkgdesc="Linux man pages"
@@ -10,24 +10,20 @@ arch="noarch"
 license="GPL-2.0-or-later"
 options="!strip !check"
 source="https://cdn.kernel.org/pub/linux/docs/man-pages/man-pages-$pkgver.tar.xz
-	https://cdn.kernel.org/pub/linux/docs/man-pages/man-pages-posix/man-pages-posix-${_posixver}.tar.xz
+	https://cdn.kernel.org/pub/linux/docs/man-pages/man-pages-posix/man-pages-posix-$_posixver.tar.xz
 	"
 
 build() {
-	cd "$builddir"
-
 	mkdir man0
 	for sect in 0 1 3; do
 		sed -i "/^\.so /s/man${sect}p/man$sect/" \
-			"$srcdir"/$pkgname-posix-${_posixver}/man${sect}p/*
-		mv "$srcdir"/$pkgname-posix-${_posixver}/man${sect}p/* \
+			"$srcdir"/$pkgname-posix-$_posixver/man${sect}p/*
+		mv "$srcdir"/$pkgname-posix-$_posixver/man${sect}p/* \
 			"$srcdir"/$pkgname-$pkgver/man$sect/
 	done
 }
 
 package() {
-	cd "$builddir"
-
 	make prefix="$pkgdir"/usr install
 	find "$pkgdir"/usr/share/man -name "*.[0-9]" -o -name "*.[0-9]p" \
 		| xargs gzip -9
@@ -49,5 +45,5 @@ package() {
 	rm -f "$pkgdir"/usr/share/man/man3/explicit_bzero*
 }
 
-sha512sums="723c67eaddc2652dc36fa698d08473dbc8e17f4351b2c391064b80d637ec7e5cdc1b20ee4e542d95f441331c7b773899cfdeeeb7a2f599c64d6eac5c586b7cbe  man-pages-5.04.tar.xz
+sha512sums="4f1b9f69c44fb054de9834ad4356fc633416ce98285d137fc616967129f326c8dd28eba05d4fe12a385aced9ff478ed42dde777631be124b2ddc7569ee27a395  man-pages-5.05.tar.xz
 e6ec8eb57269fadf368aeaac31b5a98b9c71723d4d5cc189f9c4642d6e865c88e44f77481dccbdb72e31526488eb531f624d455016361687a834ccfcac19fa14  man-pages-posix-2013-a.tar.xz"
