community/zabbix: upgrade to 4.4.5

--- a/community/zabbix/APKBUILD
+++ b/community/zabbix/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=zabbix
-pkgver=4.4.4
+pkgver=4.4.5
 pkgrel=0
 pkgdesc="Enterprise-class open source distributed monitoring"
 url="http://www.zabbix.com"
@@ -23,11 +23,11 @@ makedepends="postgresql-dev curl-dev net-snmp-dev libevent-dev pcre-dev
 install="$pkgname.pre-install"
 pkgusers="zabbix"
 pkggroups="zabbix"
-options="!check" # no tests available
+options="chmod-clean !check" # no tests available
 subpackages="$pkgname-doc $pkgname-agent $pkgname-pgsql $pkgname-mysql $pkgname-sqlite
 	$pkgname-webif::noarch $pkgname-utils $pkgname-setup::noarch
 	$pkgname-openrc $pkgname-agent-openrc:agent_openrc"
-source="https://downloads.sourceforge.net/zabbix/zabbix-$pkgver.tar.gz
+source="https://downloads.sourceforge.net/zabbix/zabbix-${pkgver/_/}.tar.gz
 	zabbix-server.initd
 	zabbix-server.confd
 	zabbix-agentd.initd
@@ -43,13 +43,13 @@ source="https://downloads.sourceforge.net/zabbix/zabbix-$pkgver.tar.gz
 
 # Agent2 does not build on x86 atm
 case $CARCH in
-x86|armhf|armv7)
-	_build_agent2=false;;
 *)
 	subpackages="$subpackages $pkgname-agent2 $pkgname-agent2-openrc:agent2_openrc"
 	makedepends="$makedepends go"
 	_build_agent2=true;;
 esac
+
+builddir="$srcdir/$pkgname-${pkgver/_/}"
 
 # security fixes:
 #   3.0.4-r0:
@@ -99,7 +99,7 @@ build() {
 	for db in postgresql mysql sqlite3; do
 		cd "$srcdir"
 		msg "Building for $db"
-		cp -r "$pkgname-$pkgver" "$pkgname-$pkgver-$db"
+		cp -r "$builddir" "$builddir-$db"
 		cd "$builddir-$db"
 		case $db in
 			sqlite3)
@@ -249,7 +249,7 @@ agent2_openrc() {
 		"$subpkgdir"/etc/init.d/zabbix-agent2
 }
 
-sha512sums="deed67b6074f140c189e1e046d6200c1a9d7e7832664b70a6314baf1458a79c8d1ff4923572a492285f3751946640dfbbd198f3545b26dc8e180ab2ec6bc3ef8  zabbix-4.4.4.tar.gz
+sha512sums="b7971f3c25270c5e35861a0db8e810d8ffe6c59ffc935fa2df5b1fd5d591d577db60e04673ca0a6f158dd126245a6ee4cd4e84a3637c447c9b6f68f77848f114  zabbix-4.4.5.tar.gz
 9998ee172a28002d98bacc3f76038ff52b8cf2b206e101418d76b4ca3de94afaf92cb4f7a6235ecf177f74beb9dd3ea1f3983c4f164b4f60bb601acba65aa175  zabbix-server.initd
 9c06527bf653c40585fa7eeb3f7a0b2fc454031d24cd0d1633aed87b78a681c5227a193c5b9fcfcea0839135874e27ba7dd9b198573f905f680a2856f79e9512  zabbix-server.confd
 0d50795233ee469e36e9788f8685b16207a37f8a9370e6591688906176e7cb8387ce06f132d7e582a1757fdea7c584a70ccfac39a604da315d71121fa629cbb7  zabbix-agentd.initd
