main/linux-octeon: use different strategy for SDIO underclock

--- a/main/linux-octeon/APKBUILD
+++ b/main/linux-octeon/APKBUILD
@@ -7,7 +7,7 @@ case $pkgver in
 	*.*.*)	_kernver=${pkgver%.*};;
 	*.*) _kernver=$pkgver;;
 esac
-pkgrel=0
+pkgrel=1
 pkgdesc="Linux lts kernel (for Octeon)"
 url="http://kernel.org"
 depends="mkinitfs"
@@ -148,6 +148,9 @@ _package() {
 
 	install -D include/config/kernel.release \
 		"$_outdir"/usr/share/kernel/$_buildflavor/kernel.release
+
+	mv "$_outdir"/boot/vmlinux* "$_outdir"/boot/vmlinux.64
+	md5sum "$_outdir"/boot/vmlinux.64 | cut -c1-32 > "$_outdir"/boot/vmlinux.64.md5
 }
 
 # main flavor installs in $pkgdir
@@ -212,6 +215,6 @@ _dev() {
 sha512sums="9f60f77e8ab972b9438ac648bed17551c8491d6585a5e85f694b2eaa4c623fbc61eb18419b2656b6795eac5deec0edaa04547fc6723fbda52256bd7f3486898f  linux-5.4.tar.xz
 39d145b7afd3297d9572e7c37eb40b58c3b0d7f30cc361bdf6c89e6bb54a6072f79dea979f4b4fc24d06fe06c406d10949cbf79d373e1ba82514a2f1bb0a6255  octeon-rd_name.patch
 a2c0d901188570ebba6917b727cdb4823bda5dbe29a559ed2055db21b4f5dd4990f623b94f07072bcbf69647f250afb52d1771d706bdc072e2cfb00003e257b4  octeon-disable-devicetree-deprecation-warning.patch
-0fa567bdc29f63e7c9da43a0eefd2daa239791ecd3281257033027b70ebb424d85e55a289b4b59439393cfb199a0dc89994de495cf215df501aa83a5accd0adb  ubnt-e200-sdio-underclock.patch
+c227cd4a0c9712a75d62211becb8591fccd15a93ae4483835f1ec69aabca51aaf8254c37e6315bbd5a08b1f521b369269bfe973700eb993ec6a629b7167e75f7  ubnt-e200-sdio-underclock.patch
 e8f70a32a17af6524bda22ddc1a66f265b9a9fe76cfe8c9a92340dcce9a23b740ef342cf450a5ed710777905650cff795af71ae52ef9b413bc8905dd85bcfc3a  config-octeon.mips64
 751b3d46f3d3b6bb994a793bb74ca12abe1f9b6d4e45bff6eaab4e3839b8f37a1e4d4dec28ba68648a5c25098ac027995eaebbab13bdebb1f490da379bbaa079  patch-5.4.17.xz"
