testing/godot: add missing dep on libexecinfo-dev

--- a/testing/godot/APKBUILD
+++ b/testing/godot/APKBUILD
@@ -8,7 +8,7 @@ url="http://www.godotengine.org"
 arch="x86_64" # deactivated for other architecture due to conflicts between binaries
 license="MIT"
 # TODO: Use system freetype instead of bundled one.
-makedepends="scons gcc python2 libxcursor-dev libxinerama-dev
+makedepends="scons gcc python2 libxcursor-dev libxinerama-dev libexecinfo-dev
 	libxrandr-dev libxi-dev libx11-dev alsa-lib-dev mesa-dev yasm-dev"
 options="!check" # no testsuites
 subpackages="$pkgname-doc"
