testing/kanshi: remove cmake from makedepends
- indicate that kanshi does not have a test suite
- fix apkbuild-lint warnings
- adopt maintainership

--- a/testing/kanshi/APKBUILD
+++ b/testing/kanshi/APKBUILD
@@ -1,18 +1,17 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
-# Maintainer:
+# Maintainer: Michał Polański <michal@polanski.me>
 pkgname=kanshi
 pkgver=1.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Dynamic display configuration for Wayland"
 url="https://github.com/emersion/kanshi"
 arch="all"
 license="MIT"
-makedepends="cmake meson scdoc wayland-dev"
+options="!check" # no test suite
+makedepends="meson scdoc wayland-dev"
 subpackages="$pkgname-doc"
-source="https://github.com/emersion/kanshi/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz
-	no-maybe-uninitialized.patch
-	"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://github.com/emersion/kanshi/releases/download/v$pkgver/kanshi-$pkgver.tar.gz
+	no-maybe-uninitialized.patch"
 
 build() {
 	meson \
