community/knotifications: add missing make dep
Closes !3892

--- a/community/knotifications/APKBUILD
+++ b/community/knotifications/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="Abstraction for system notifications"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://community.kde.org/Frameworks"
 license="LGPL-2.1-only OR LGPL-3.0-only"
-depends_dev="qt5-qtbase-dev qt5-qtspeech-dev qt5-qtx11extras-dev kconfig-dev kcoreaddons-dev phonon-dev"
+depends_dev="qt5-qtbase-dev qt5-qtspeech-dev qt5-qtx11extras-dev kconfig-dev kcoreaddons-dev kwindowsystem-dev phonon-dev"
 makedepends="$depends_dev extra-cmake-modules qt5-qttools-dev doxygen"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/knotifications-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
