testing/traefik: fix dashboard

--- a/testing/traefik/APKBUILD
+++ b/testing/traefik/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Joe Holden <jwh@zorins.us>
 pkgname=traefik
 pkgver=2.1.4
-pkgrel=0
+pkgrel=1
 pkgdesc="The Cloud Native Edge Router"
 url="https://traefik.io"
 arch="all !x86 !s390x !armhf !armv7" # tests fails on x86 and armhf
@@ -14,26 +14,14 @@ pkgusers="$pkgname"
 pkggroups="$pkgname"
 subpackages="$pkgname-openrc"
 options="chmod-clean"
-source="$pkgname-$pkgver.tar.gz::https://github.com/containous/traefik/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/containous/traefik/releases/download/v$pkgver/traefik-v$pkgver.src.tar.gz
 	traefik.initd
 	traefik.confd
 	traefik.toml"
 
-builddir="$srcdir/src/github.com/containous/$pkgname"
+builddir="$srcdir"
 
-# secfixes:
-#   1.7.14-r0:
-#   - CVE-2019-9512
-#   - CVE-2019-9514
-
-export GOPATH="$srcdir"
 export BUILD_TIMESTAMP=$(date -u "+%Y-%m-%dT%TZ" ${SOURCE_DATE_EPOCH:+-d @$SOURCE_DATE_EPOCH})
-
-prepare() {
-	default_prepare
-	mkdir -p "$srcdir/src/github.com/containous"
-	mv "$srcdir"/$pkgname-$pkgver "$builddir"/
-}
 
 build() {
 	go generate
@@ -75,7 +63,7 @@ package() {
 
 }
 
-sha512sums="e23a5470eeaddfeeab039df3906d2050f62628b6c230fe9f4e99bb0ab3336e45d7296057b58c8a0d5116a3065170a55645960ca6ad496974434ddc553e1a136d  traefik-2.1.4.tar.gz
+sha512sums="c45d8b90bc1fc437f38102c03f7d5383b94e5ee362d2c2c837085d80a5007d0432989abc5698267260fb9ba8b22561c68012b47ad0367bc221d501b776ed8992  traefik-2.1.4.tar.gz
 2fe42052cdb035b202c7c0a1acd5cfe9ed1800ca067f2f5588d54e6ffbdd672d7c46cfd57fcfc219cadaa24d64a0e038a20d092eb1e4c04b67b8eb83c0af74fd  traefik.initd
 1519c2f446c4bc3af8407eb367a05e5ec0491f28d56d5385b12a550c84606d84e2424aadd5d72e56e628fd1da3f0f194ab3c077e6da85ead75a256f8e8069751  traefik.confd
 7dff62db55362433fe33a69bfb556e6f285a033aaaab46ea970ae4ee1b19a4b0d6b25bf5523d4dc6b40d26922945fd1263ae8e53d295d6bf7f18ea1477a9e4d5  traefik.toml"
