community/py3-cu2qu: upgrade to 1.6.7

--- a/community/py3-cu2qu/APKBUILD
+++ b/community/py3-cu2qu/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=py3-cu2qu
-pkgver=1.6.6
+pkgver=1.6.7
 pkgrel=0
 pkgdesc="Cubic-to-quadratic bezier curve conversion"
 url="https://github.com/googlefonts/cu2qu"
@@ -10,8 +10,7 @@ license="Apache-2.0"
 depends="python3 py3-fonttools py3-defcon"
 makedepends="py3-setuptools python3-dev cython"
 checkdepends="py3-pytest py3-coverage"
-source="$pkgname-$pkgver.tar.gz::https://github.com/googlefonts/cu2qu/archive/v$pkgver.tar.gz
-	3bd978bf0f011d8c7ee6ff21fb04815d6d80427d.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/googlefonts/cu2qu/archive/v$pkgver.tar.gz"
 builddir="$srcdir/cu2qu-$pkgver"
 
 build() {
@@ -28,5 +27,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="419ed7b822b2d5fc5237d33ba56882d27501c24c5000be23468a20f79be8af27637e8104ecaebc32898da067c55f3e1343d59c7b804da2f28765cee12def4ccf  py3-cu2qu-1.6.6.tar.gz
-cc4fe15fc65bc13e1668e968890dd2c78a578b4f20385b1994c51b2d4783200f8d902c371a9f8e1ebfe7b251b5b5ad87621d11ff807d42c472bd00f095302c18  3bd978bf0f011d8c7ee6ff21fb04815d6d80427d.patch"
+sha512sums="5140db9fad305942a45faa405a70bcee389b03257889b82faa4704c8250c27c81273d28fa859701b4d05c439673887f07960f225563eb651bf5a8a93f7743b05  py3-cu2qu-1.6.7.tar.gz"
