--- a/community/plasma-angelfish/APKBUILD
+++ b/community/plasma-angelfish/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-angelfish
 pkgver=1.3.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Small Webbrowser for Plasma Mobile"
 arch="all !ppc64le !s390x !armhf" # ppc64le and s390x blocked by qt5-qtwebengine, armhf blocked by kirigami2 -> qt5-qtdeclarative-dev
 url="https://phabricator.kde.org/source/plasma-angelfish/"
 license="GPL-3.0-or-later"
-depends="kirigami2 plasma-framework purpose"
+depends="qt5-qtquickcontrols2 kirigami2 plasma-framework purpose"
 makedepends="cmake qt5-qtwebengine-dev kdeclarative-dev kirigami2-dev plasma-framework-dev kio-dev ki18n-dev extra-cmake-modules purpose-dev"
 source="$pkgname-$pkgver.tar.gz::https://invent.kde.org/jbbgameich/plasma-angelfish/-/archive/v$pkgver/plasma-angelfish-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
