community/plasma: upgrade to 5.18.0

--- a/community/kde-gtk-config/APKBUILD
+++ b/community/kde-gtk-config/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kde-gtk-config
-pkgver=5.17.5
+pkgver=5.18.0
 pkgrel=0
 pkgdesc="GTK2 and GTK3 Configurator for KDE"
 arch="all !armhf" # qtdeclarative
@@ -10,21 +10,13 @@ license="GPL-2.0 AND LGPL-2.1-only OR LGPL-3.0-only"
 depends="gsettings-desktop-schemas"
 makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtsvg-dev ki18n-dev kio-dev kconfigwidgets-dev knewstuff-dev karchive-dev kcmutils-dev kiconthemes-dev gtk+2.0-dev gtk+3.0-dev gsettings-desktop-schemas-dev"
 source="https://download.kde.org/stable/plasma/$pkgver/kde-gtk-config-$pkgver.tar.xz"
-subpackages="$pkgname-lang"
-
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
 
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -33,7 +25,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
-sha512sums="29cea96d6f7471717ecb2f48df5e19a96c7730c9f47157dc01c236d11253547aba57f5cb30cbb08659af53dba81160ff1982f9ed2908aaec91940365eb625201  kde-gtk-config-5.17.5.tar.xz"
+sha512sums="9c86bfa0787cb0046e3639e38ebc8fa3685f8935322f14d20185703090d6fe61558b33a918e983d95a90a41d4d15ef3f34dbba36ce296af7ea7d426063db15f1  kde-gtk-config-5.18.0.tar.xz"
