--- a/community/kscreen/APKBUILD
+++ b/community/kscreen/APKBUILD
@@ -1,31 +1,24 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kscreen
-pkgver=5.17.5
+pkgver=5.18.0
 pkgrel=0
 pkgdesc="KDE's screen management software"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://www.kde.org/workspaces/plasmadesktop/"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 depends="hicolor-icon-theme"
-makedepends="extra-cmake-modules qt5-qtbase-dev kdbusaddons-dev kconfig-dev kconfigwidgets-dev ki18n-dev kxmlgui-dev kglobalaccel-dev kwidgetsaddons-dev kdeclarative-dev kiconthemes-dev plasma-framework-dev libkscreen-dev kcmutils-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtsensors-dev kdbusaddons-dev kconfig-dev kconfigwidgets-dev ki18n-dev kxmlgui-dev kglobalaccel-dev kwidgetsaddons-dev kdeclarative-dev kiconthemes-dev plasma-framework-dev libkscreen-dev kcmutils-dev"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/plasma/$pkgver/kscreen-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -35,8 +28,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="3a0abdeb8aa4ffde8a3aefee71292916ea1331ff91292976cb94b6def068d012ead4fe1aae3c6ad9353423a701cfaaa051f0455897fd80693a3281a33fe3d332  kscreen-5.17.5.tar.xz"
+sha512sums="6956d30a8b4a8b3f6ea26d2e99ac268809ab732c99188ebbbe982cc8d4ba5c13407ac553df307b44d25371106c95924e4c7e3b99733c9187c77b39fcfde6bec9  kscreen-5.18.0.tar.xz"
