--- a/community/xdg-desktop-portal-kde/APKBUILD
+++ b/community/xdg-desktop-portal-kde/APKBUILD
@@ -1,35 +1,28 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=xdg-desktop-portal-kde
-pkgver=5.17.5
+pkgver=5.18.0
 pkgrel=0
 pkgdesc="A backend implementation for xdg-desktop-portal that is using Qt/KDE"
 arch="all !armhf" # armhf blocked by extra-cmake-modules
 url="https://phabricator.kde.org/source/xdg-desktop-portal-kde"
 license="LGPL-2.0-or-later"
-makedepends="extra-cmake-modules qt5-qtbase-dev glib-dev kio-dev kwayland-dev libepoxy-dev
-	pipewire-dev kcoreaddons xdg-desktop-portal cups-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev glib-dev kio-dev kwayland-dev
+	kdeclarative-dev kirigami2-dev kcoreaddons-dev plasma-framework-dev
+	libepoxy-dev pipewire-dev kcoreaddons xdg-desktop-portal cups-dev"
 subpackages="$pkgname-lang"
 source="https://download.kde.org/stable/plasma/$pkgver/xdg-desktop-portal-kde-$pkgver.tar.xz"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
-sha512sums="b5a82d6744e49d2f6edb7bef2120f5517216dcbf8681cf50fb5522444f635d6cae17cf499310866e351ef9eaab35d37f604d241451a23fbd5f037e377cfd102c  xdg-desktop-portal-kde-5.17.5.tar.xz"
+sha512sums="28174d79b34d657a7aad28f710b7a87f0484e2bacb0b8f1a04d195a4beaf4e07c82b11f2abe4cb2a403e1011fc1f5a86f50f70890e332f81be45bfe6dfc77d18  xdg-desktop-portal-kde-5.18.0.tar.xz"
