--- a/community/plasma-desktop/APKBUILD
+++ b/community/plasma-desktop/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-desktop
-pkgver=5.17.5
-pkgrel=1
+pkgver=5.18.0
+pkgrel=0
 pkgdesc="KDE Plasma Desktop"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url='https://www.kde.org/workspaces/plasmadesktop/'
@@ -47,24 +47,16 @@ depends_dev="
 	"
 makedepends="$depends_dev extra-cmake-modules kdoctools-dev"
 checkdepends="xvfb-run iso-codes"
-source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz
-	revert-fix-jagginess-for-activities-list-icons.patch"
+source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang knetattach"
 options="!check" # Requires running dbus
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -73,8 +65,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 
 	rm "$pkgdir"/usr/bin/knetattach
 	rm "$pkgdir"/usr/share/applications/org.kde.knetattach.desktop
@@ -87,5 +78,4 @@ knetattach() {
 	cd "$builddir"/build/knetattach
 	DESTDIR="$subpkgdir" make install
 }
-sha512sums="c910be6bf63091f14f190e8fbfbd0039aa175d30f7a6870dbd99ffc3ff49a0f77e63e2d3fc9319dab1c650b15108cdaefee470eddab1213afe8d3a149ac64dd4  plasma-desktop-5.17.5.tar.xz
-e4c84c37788bdc0f98f2b6c45ca497a3f8eac5b948ddf034c40ee12af0d1ac88d3ebf64dd146936f4f0f1b295c7fa7f3cd2854f85e2ec3dd546a8ccc716f3bdd  revert-fix-jagginess-for-activities-list-icons.patch"
+sha512sums="863516751f4f37193ad5a96713fa9c7eb8d346e3bbe33dc43dcb83fa18955456dc875ddc3e2db990e7f3a017e394a69790e3dc21e13e8fc0c5d6841591c8fb4e  plasma-desktop-5.18.0.tar.xz"
