--- a/main/gdb/APKBUILD
+++ b/main/gdb/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gdb
-pkgver=8.3.1
-pkgrel=4
+pkgver=9.1
+pkgrel=0
 pkgdesc="The GNU Debugger"
 url="https://www.gnu.org/software/gdb/"
 arch="all"
@@ -15,7 +15,6 @@ source="https://ftp.gnu.org/gnu/gdb/gdb-$pkgver.tar.xz
 	ppc-musl.patch
 	ppc-ptregs.patch
 	musl-signals.patch
-	python-3.8.patch
 	"
 
 prepare() {
@@ -75,9 +74,8 @@ multiarch() {
 		"$subpkgdir"/usr/bin/gdb-multiarch
 }
 
-sha512sums="9053a2dc6b9eb921907afbc4cecc75d635aa76df5e8c4f0e5824ccf57cb206b299c19b127fff000b65c334826ff8304a54ff6098428365a8e997cca886c39e9a  gdb-8.3.1.tar.xz
+sha512sums="84cdd408d80a3fc5779de459c5b26154d31b329ebde7e3aa78799fb1eb245d8b64b8c8ee7242382a1dbd95b4e6f9d84fef41d12a0646aa75d3dee4709ea1f6e7  gdb-9.1.tar.xz
 70e7d04e4d72461436da503b5bfa370c5779e03245c521f30e9779d5ff37dbb2d708b05f2afb27f43ad9defc44df4bd979d72f777e744851fdbf156295e1cc9f  s390x-use-elf-gdb_fpregset_t.patch
 04911f87904b62dd7662435f9182b20485afb29ddb3d6398a9d31fef13495f7b70639c77fdae3a40e2775e270d7cd40d0cfd7ddf832372b506808d33c8301e01  ppc-musl.patch
 b75e1c1ee503a1948a7d5b8d90427b5c7d38ded69978056cee0adca222771a5c95ed1ac73127fcae7b795ea94296344eee5fca47e4cd04b418c164a756fb0933  ppc-ptregs.patch
-660317b7f886ac8d7fcdf44d214e109fdd818ed326afea8bf8046c0a39b36afa29751aefc2acd168207e40254f7340e98c0f34c5e6ad0e2e0a6b0a26cd86641b  musl-signals.patch
-ef132bdb4c0a54c139b1f6ccc72425a3e2320cd74ed037fe164c67fdf8cf5c8c07aa4f504bee8ca30e75f84f03765ac0bba4059334fc752e38d1ee0fa9f51b23  python-3.8.patch"
+013141b89afafba02a6ddd1407dfd9b2566606e7b1d4bd03b4e23d9b523231103dbeca17a435669a7a7508f827cbe7f601e3bb1daa96d892ea33b897265966ad  musl-signals.patch"
