--- a/testing/kio-gdrive/APKBUILD
+++ b/testing/kio-gdrive/APKBUILD
@@ -2,28 +2,22 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kio-gdrive
 pkgver=1.2.7
-pkgrel=0
+pkgrel=1
 arch="all !ppc64le !s390x !armhf" # Blocked by libkgapi -> qt5-qtwebengine
 url="https://community.kde.org/KIO_GDrive"
 pkgdesc="KIO Slave to access Google Drive"
 license="GPL-2.0-or-later"
+depends="signon-plugin-oauth2 signon-ui"
 makedepends="extra-cmake-modules qt5-qtbase-dev ki18n-dev kdoctools-dev kio-dev kaccounts-integration-dev libkgapi-dev intltool"
 source="https://download.kde.org/stable/kio-gdrive/$pkgver/src/kio-gdrive-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-lang"
 
-prepare() {
-	default_prepare
-
-	mkdir "$builddir"/build
-}
-
 build() {
-	cd "$builddir"/build
-	cmake "$builddir" \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
@@ -32,8 +26,7 @@ check() {
 }
 
 package() {
-	cd "$builddir"/build
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="f1eedad2cd244e38f6cdf397e9488cb7f31fe7c4b17825f3b0882ff46f7f62f087e7b2bc59db434b4a55641920b8b03f3dec6adf7031ccc2277c7a0b166f9c80  kio-gdrive-1.2.7.tar.xz"
