community/plasma-desktop: cherry-pick patch as suggested by upstream
This fixes https://bugs.kde.org/show_bug.cgi?id=417424

--- a/community/plasma-desktop/APKBUILD
+++ b/community/plasma-desktop/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=plasma-desktop
 pkgver=5.18.0
-pkgrel=0
+pkgrel=1
 pkgdesc="KDE Plasma Desktop"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url='https://www.kde.org/workspaces/plasmadesktop/'
@@ -47,7 +47,8 @@ depends_dev="
 	"
 makedepends="$depends_dev extra-cmake-modules kdoctools-dev"
 checkdepends="xvfb-run iso-codes"
-source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz"
+source="https://download.kde.org/stable/plasma/$pkgver/plasma-desktop-$pkgver.tar.xz
+	B417424.patch"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang knetattach"
 options="!check" # Requires running dbus
 
@@ -78,4 +79,5 @@ knetattach() {
 	cd "$builddir"/build/knetattach
 	DESTDIR="$subpkgdir" make install
 }
-sha512sums="863516751f4f37193ad5a96713fa9c7eb8d346e3bbe33dc43dcb83fa18955456dc875ddc3e2db990e7f3a017e394a69790e3dc21e13e8fc0c5d6841591c8fb4e  plasma-desktop-5.18.0.tar.xz"
+sha512sums="863516751f4f37193ad5a96713fa9c7eb8d346e3bbe33dc43dcb83fa18955456dc875ddc3e2db990e7f3a017e394a69790e3dc21e13e8fc0c5d6841591c8fb4e  plasma-desktop-5.18.0.tar.xz
+9aea277502dba88e8ed43fb75f59b9c044ea84c7a99d46b21507fc862b6b221bcd8cad06cda7f5d66d9e15cfc4662feb19869de327c84b55c920218368f18dd7  B417424.patch"
