--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=firefox
-pkgver=72.0.2
+pkgver=73.0
 pkgrel=0
 pkgdesc="Firefox web browser"
 url="https://www.firefox.com/"
@@ -61,9 +61,9 @@ source="https://ftp.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-$pkg
 	disable-moz-stackwalk.patch
 	fix-rust-target.patch
 	fix-webrtc-glibcisms.patch
-	8e71fa07fe00.patch
 	rust_audio-thread-priority.patch
 	fd6847c9416f9eebde636e21d794d25d1be8791d.patch
+	allow-custom-rust-vendor.patch
 
 	x86_64-alpine-linux-musl.json
 	firefox.desktop
@@ -117,6 +117,7 @@ prepare() {
 	cp "$srcdir"/x86_64-alpine-linux-musl.json rust_targets/.
 
 	_clear_vendor_checksums audio_thread_priority
+	_clear_vendor_checksums target-lexicon
 }
 
 build() {
@@ -254,7 +255,7 @@ package() {
 	EOF
 }
 
-sha512sums="4d8c832709b8831234b571b2f809d1601490db47982ff1d71913062c42c17a7f3340c72b6162b74a248a9cfe7b5d1646fb9a0463dcbcfaed32e1346ee20e4147  firefox-72.0.2.source.tar.xz
+sha512sums="e10a8b48ae532d855ff50761cbdf2a6d94b2bad58a5e18d040db43d3424cbb068772f4d91c0aadd6c40b13e3d020e0e712955a1a12b41fda6333197fc34aa19a  firefox-73.0.source.tar.xz
 0b3f1e4b9fdc868e4738b5c81fd6c6128ce8885b260affcb9a65ff9d164d7232626ce1291aaea70132b3e3124f5e13fef4d39326b8e7173e362a823722a85127  stab.h
 2f4f15974d52de4bb273b62a332d13620945d284bbc6fe6bd0a1f58ff7388443bc1d3bf9c82cc31a8527aad92b0cd3a1bc41d0af5e1800e0dcbd7033e58ffd71  fix-fortify-system-wrappers.patch
 84b84d2d7dbc16002510bf856796ad345ac38ef6d3254670230189bba7c2d4781714d231236d5a3d70129a4597b430c3171644b01ad0f5a5bb13b55d407337a4  fix-seccomp-bpf.patch
@@ -264,9 +265,9 @@ a4a3e062661bda64d502d426c480ac9645345860118de9df9ffe6e0597738c70c11e5cdef2d4fd12
 454ea3263cabce099accbdc47aaf83be26a19f8b5a4568c01a7ef0384601cf8315efd86cd917f9c8bf419c2c845db89a905f3ff9a8eb0c8e41042e93aa96a85c  disable-moz-stackwalk.patch
 089c97e6011e86a9b9d9e7b0c8ba3af0519d1ce4e2b1e9ab7719762d6968388bfa47dad3bf23a6d41c3d66fdcc6c15e2c926e3ff9500bfd4fbf1b53e6d19dc57  fix-rust-target.patch
 d35cacb9ede80e6bfbef0709823e536dddfb1c02d776275b0b7adb5969e9927d8c6117df96873569c3f3db0a18ee5db24f8086a9311a05077892be43a3dd8d79  fix-webrtc-glibcisms.patch
-0518e66c58cbf0615af396ab962104780995eadb748254cc3a0864155e65d6132d4d6d872501f791aec552a8fc6aac8d478efc03e2203012fc1dab228b329088  8e71fa07fe00.patch
 18098bae18ce9ead6bca0d93d28e634495fa08a4c0707057f72a9e34205a64a0ce5ab98a4cfc2d492412725b14447eb9553b2976d9620c3d71eba2135c6ba211  rust_audio-thread-priority.patch
 60845dcb034b2c4459c30f7d5f25c8176cf42df794e2cc0e86c3e2abb6541c24b962f3a16ca70a288d4d6f377b68d00b2904b22463108559612053d835d9bff1  fd6847c9416f9eebde636e21d794d25d1be8791d.patch
+8487a7f1936d493f0429ebbf579469471542fccce3a842803ade3fa76200b0e831a176aff9c8072da17932d01923cfc050611041e3e9e429b25995b9a07bd3cf  allow-custom-rust-vendor.patch
 0dfa633abf3f411c90a030c46ee7f8fdde6fdd9f3a0c493599a58633e09b183d6c04590fc1984256e514c1da4f72f43dde3f5dbceef888b08262952b4f894919  x86_64-alpine-linux-musl.json
 f3b7c3e804ce04731012a46cb9e9a6b0769e3772aef9c0a4a8c7520b030fdf6cd703d5e9ff49275f14b7d738fe82a0a4fde3bc3219dff7225d5db0e274987454  firefox.desktop
 5dcb6288d0444a8a471d669bbaf61cdb1433663eff38b72ee5e980843f5fc07d0d60c91627a2c1159215d0ad77ae3f115dcc5fdfe87e64ca704b641aceaa44ed  firefox-safe.desktop"
