main/libmowgli: fix url=

--- a/main/libmowgli/APKBUILD
+++ b/main/libmowgli/APKBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libmowgli
 pkgver=2.1.3
-pkgrel=3
+pkgrel=4
 pkgdesc="C library framework designed to reduce writing of boilerplate code"
-url="http://atheme.org/projects/libmowgli.html"
+url="https://github.com/atheme/libmowgli-2"
 arch="all"
 options="!check"  # No test suite.
 license="ISC"
@@ -15,7 +15,6 @@ source="https://github.com/atheme/libmowgli-2/archive/v$pkgver/libmowgli-$pkgver
 builddir="$srcdir"/$pkgname-2-$pkgver
 
 prepare() {
-	cd "$builddir"
 	default_prepare
 	# workaround bug in busybox
 	sed -e "/touch/s/0001010000/200001010000/g" \
@@ -23,7 +22,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -35,7 +33,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
