testing/logwatch: fix url=

--- a/testing/logwatch/APKBUILD
+++ b/testing/logwatch/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=logwatch
 pkgver=7.5.2
-pkgrel=0
+pkgrel=1
 pkgdesc="A customizable, pluggable log-monitoring system"
-url="http://www.logwatch.org"
+url="https://www.logwatch.org"
 arch="noarch"
 license="custom"
 options="!check"
