testing/telegram-desktop: upgrade to 1.9.12

--- a/testing/telegram-desktop/APKBUILD
+++ b/testing/telegram-desktop/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 pkgname=telegram-desktop
-pkgver=1.9.10
+pkgver=1.9.12
 pkgrel=0
 pkgdesc="Telegram Desktop messaging app"
 options="!check" # Requires Catch2 to be packaged.
@@ -43,7 +43,6 @@ source="
 	https://github.com/telegramdesktop/tdesktop/releases/download/v$pkgver/tdesktop-$pkgver-full.tar.gz
 	musl-basename.patch
 	qt-plugin-path.patch
-	no-system-parts.patch
 	"
 builddir="$srcdir/tdesktop-$pkgver-full"
 
@@ -66,6 +65,8 @@ build() {
 		-DTDESKTOP_USE_PACKAGED_TGVOIP=OFF \
 		-DTDESKTOP_LAUNCHER_BASENAME=telegram-desktop \
 		-DTDESKTOP_FORCE_GTK_FILE_DIALOG=ON \
+		-DDESKTOP_APP_USE_PACKAGED_GSL=OFF \
+		-DDESKTOP_APP_USE_PACKAGED_VARIANT=OFF \
 		${CMAKE_CROSSOPTS} .
 	ninja -C build
 }
@@ -90,7 +91,6 @@ package() {
 	done
 }
 
-sha512sums="128dc3fd42196ebf61853917914c3d33fb148d3e6b04847ffa6d4df5baa8d9e286e7d25317b0dd2a332f1475f60b5addd19bb6e25a0fa6bbca316c22235569c6  tdesktop-1.9.10-full.tar.gz
+sha512sums="11b6be5fa4db95a8b329b492edcdeca2cf834c274a86a26fac3e62254649e5767da6b2442eff6f7b48b975f4b319fee46d10e9430e28a3ef080146a8deb3bfb2  tdesktop-1.9.12-full.tar.gz
 6062602d02e20917c06f17d12bb21bd4a94b23c2a6744a8a05c2c93d41747ba413e110edd344ecd130c28ebaf997ae46b347d239e69f5856ead42318bd5b01cd  musl-basename.patch
-183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch
-8f755b797676f56313f3355f7442665f7f03a7a8c1339ef1ab1790db11c0f48ab02b62a6240146772580022305125ffe927b11c94ba711cf7884c9cc4a1f123b  no-system-parts.patch"
+183767e9a291dd605797cdc46382d8cb6a73a342348a40df7d52864ea27b3aa8709808cd51c46f5e611c247229ed336cb569bed1185c4c97b03171b56bbe5653  qt-plugin-path.patch"
