community/perl-xml-libxslt: upgrade to 1.99

--- a/community/perl-xml-libxslt/APKBUILD
+++ b/community/perl-xml-libxslt/APKBUILD
@@ -3,14 +3,13 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=perl-xml-libxslt
 _pkgreal=XML-LibXSLT
-pkgver=1.97
+pkgver=1.99
 pkgrel=0
 pkgdesc="Interface to GNOME libxslt library"
 url="https://metacpan.org/release/XML-LibXSLT"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-xml-libxml"
-depends="$cpandepends"
+depends="perl perl-xml-libxml"
 makedepends="perl-dev libxml2-dev libxslt-dev libgcrypt-dev libgpg-error-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/S/SH/SHLOMIF/XML-LibXSLT-$pkgver.tar.gz"
@@ -37,4 +36,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="9c1ef90ac7b1427f30d7186aaf716056d61fd6964d7687edf0ccb2d2cfd49cda69fe31f9b83dd9ed345a61087235db3addf93e8df5874c907f094dbd1ea0cb4f  XML-LibXSLT-1.97.tar.gz"
+sha512sums="d716fe44673c83c5670a8f98cf82057e7df35d43ee452843adb7c605d36e7a42b35bdf26937a2e3d8c55494ac83c23f1421ab4481a4817c011074668bc951739  XML-LibXSLT-1.99.tar.gz"
