testing/gnome-2048: change minimum window size to 350x350
Signed-off-by: Danct12 <danct12@disroot.org>

--- a/testing/gnome-2048/APKBUILD
+++ b/testing/gnome-2048/APKBUILD
@@ -2,13 +2,14 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-2048
 pkgver=3.34.4
-pkgrel=1
+pkgrel=2
 arch="all"
 url="https://wiki.gnome.org/Apps/2048"
 pkgdesc="Obtain the 2048 tile"
 license="GPL-3.0-or-later"
 makedepends="meson ninja itstool vala gtk+3.0-dev clutter-dev clutter-gtk-dev libgee-dev libgnome-games-support-dev"
-source="https://download.gnome.org/sources/gnome-2048/${pkgver%.*}/gnome-2048-$pkgver.tar.xz"
+source="https://download.gnome.org/sources/gnome-2048/${pkgver%.*}/gnome-2048-$pkgver.tar.xz
+	smaller-window.patch"
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
@@ -30,4 +31,5 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="a085c77acef29241ddeab1c00f91dab3a6c51e3c1dc5baaafd25515a23dd5461e60b1423a96cb0830d844e96b1fd9ec81e9451cf8201329b59c31ad83b84fe27  gnome-2048-3.34.4.tar.xz"
+sha512sums="a085c77acef29241ddeab1c00f91dab3a6c51e3c1dc5baaafd25515a23dd5461e60b1423a96cb0830d844e96b1fd9ec81e9451cf8201329b59c31ad83b84fe27  gnome-2048-3.34.4.tar.xz
+4d0f024d2cb3db1a5f3193a171958e81128bfec5e0a3e21d9942f508ea7a2427251eeca8904ea5088d49c9f32d327a2ee0f33e73cc1cb2df9e5fd38eb0d0b314  smaller-window.patch"
