--- a/testing/icdiff/APKBUILD
+++ b/testing/icdiff/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=icdiff
 pkgver=1.9.5
-pkgrel=1
+pkgrel=2
 pkgdesc="Improved colored diff"
-url="http://www.jefftk.com/icdiff"
+url="https://www.jefftk.com/icdiff"
 arch="noarch"
 license="Python-2.0"
 depends="python3 py3-setuptools"
