--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -9,7 +9,7 @@ case $pkgver in
 	*.*) _v=$pkgver;;
 esac
 
-pkgrel=0
+pkgrel=1
 pkgdesc="Random collection of Linux utilities"
 url="https://git.kernel.org/cgit/utils/util-linux/util-linux.git"
 arch="all"
@@ -68,6 +68,7 @@ package() {
 }
 
 dev() {
+	depends_dev="$depends_dev util-linux=$pkgver-r$pkgrel"
 	default_dev
 	replaces="e2fsprogs-dev util-linux-ng-dev"
 }
