testing/litespeed: fix url= and license=

--- a/testing/litespeed/APKBUILD
+++ b/testing/litespeed/APKBUILD
@@ -2,18 +2,17 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=litespeed
 pkgver=1.4.50
-pkgrel=0
+pkgrel=1
 _pkgreal=open$pkgname
 _pkghome=var/lib/$pkgname
 _php=php7
 pkgdesc="High-performance, lightweight, open source HTTP server"
-url="https://open.litespeedtech.com"
+url="https://openlitespeed.org/"
 arch="x86 x86_64 armhf armv7"
-license="GPL-3.0"
+license="GPL-3.0-or-later"
 pkgusers=litespeed
 pkggroups=litespeed
 depends="$_php-$pkgname $_php-bcmath $_php-json $_php-mcrypt $_php-session $_php-sockets $_php-posix"
-depends_dev=
 makedepends="linux-headers openssl-dev geoip-dev expat-dev pcre-dev zlib-dev
 	bsd-compat-headers lua-dev luajit-dev brotli-dev"
 install="$pkgname.pre-install"
@@ -28,7 +27,6 @@ source="https://openlitespeed.org/packages/openlitespeed-$pkgver.src.tgz
 builddir="$srcdir/openlitespeed-$pkgver"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--host=$CHOST \
 		--build=$CBUILD \
@@ -49,7 +47,6 @@ build() {
 
 package() {
 	local file;
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	mkdir -p "$pkgdir"/usr/lib/$pkgname \
