testing/mdbook: fix url=

--- a/testing/mdbook/APKBUILD
+++ b/testing/mdbook/APKBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=mdbook
 pkgver=0.3.5
-pkgrel=0
+pkgrel=1
 pkgdesc="mdBook is a utility to create modern online books from Markdown files"
-url="https://rust-lang-nursery.github.io/mdBook"
-arch="x86_64 x86 armhf armv7 aarch64 ppc64le" # limited by cargo
+url="https://rust-lang.github.io/mdBook/"
+arch="all !s390x" # limited by cargo
 license="MPL-2.0"
 makedepends="rust cargo"
 source="$pkgname-$pkgver.tar.gz::https://github.com/rust-lang-nursery/mdBook/archive/v$pkgver.tar.gz"
