main/opensmtpd: fix url=

--- a/main/opensmtpd/APKBUILD
+++ b/main/opensmtpd/APKBUILD
@@ -8,9 +8,9 @@
 #     - CVE-2020-7247
 pkgname=opensmtpd
 pkgver=6.6.3p1
-pkgrel=0
+pkgrel=1
 pkgdesc="Secure, reliable, lean, and easy-to configure SMTP server"
-url="http://www.opensmtpd.org"
+url="https://www.opensmtpd.org/"
 arch="all"
 license="ISC"
 depends="!postfix ca-certificates"
@@ -18,7 +18,7 @@ makedepends="automake autoconf libtool mdocml db-dev libasr-dev libevent-dev
 	fts-dev zlib-dev openssl-dev bison flex-dev"
 install="$pkgname.pre-install"
 subpackages="$pkgname-dbg $pkgname-doc"
-source="https://www.opensmtpd.org/archives/$pkgname-$pkgver.tar.gz
+source="https://www.opensmtpd.org/archives/opensmtpd-$pkgver.tar.gz
 	smtpd.initd
 	aliases
 	autoconf-decl-checks.patch
@@ -27,7 +27,6 @@ source="https://www.opensmtpd.org/archives/$pkgname-$pkgver.tar.gz
 options="suid !check"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--prefix=/usr \
 		--sysconfdir=/etc/smtpd \
